# CuteESP

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST  README.md  cuteesp.desktop
inc/: MainWindow.h  MainWindow.ui
src/: MainWindow.cpp  main.cpp
